membership selection mobile fix

--- a/src/app/common/components/team-membership/team-membership.component.scss
+++ b/src/app/common/components/team-membership/team-membership.component.scss
@@ -1,5 +1,5 @@
-body{
-    position: fixed;
+ion-content {
+    --overflow: hidden;
 }
 
 h2{
@@ -590,7 +590,7 @@ h2{
    
     .free-membership{
         .box-content{
-            bottom: 60px;
+            bottom: 80px;
         }
         &.big-box{
             .rookie-racer{
@@ -608,7 +608,7 @@ h2{
     .premium-membership{
         .box-content{
             left: 33%;
-            bottom: 60px;
+            bottom: 80px;
         }
         &.big-box{
             .mr-mrs-rich{
@@ -621,6 +621,25 @@ h2{
                 right: -258px;
                 bottom: -158px;
             }   
+        }
+    }
+    .box-content{
+        .bonus-heading{
+            margin-bottom: 0;
+            font-size: 11px;
+        }
+        .membership-heading{
+            font-size: 20px;
+            margin-bottom: 0;
+        }
+        .membership-bonus{
+            font-size: 12px;
+        }
+        .bonus{
+            margin-top: 6px;
+        }
+        .join-btn,.pay-button{
+            margin-top: 18px;
         }
     }
 }
@@ -714,7 +733,7 @@ h2{
     }
     .big-box{
         width: 100%;
-        height: 70vh;
+        height: 65vh;
         min-height: unset;
         .box-content{
             left: 20px;
@@ -729,7 +748,7 @@ h2{
     }
     .small-box{
         width: 100%;
-        height: 30vh;
+        height: 35vh;
         min-height: unset;
         .inner-box{
             height: 100%;
@@ -759,7 +778,7 @@ h2{
     .free-membership{
         .box-content{
             left: 40px;
-            bottom: 65px;
+            bottom: 100px;
         }
     }
     .box-content{
